// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader Component should render a basic component: basic 1`] = `
<PageHeader>
  <Flex
    justifyContent={
      {
        "sm": "justifyContentSpaceBetween",
      }
    }
  >
    <FlexItem>
      <PageHeaderTitle
        className="pf-u-mb-sm"
        title={
          <span
            className="test"
          >
            lorem
          </span>
        }
      />
    </FlexItem>
  </Flex>
</PageHeader>
`;

exports[`PageHeader Component should render string node types: string 1`] = `
<pageheader
  props="{
  "children": [
    {}
  ],
  "productLabel": null
}"
>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-1"
    data-ouia-component-type="RHI/Header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v5-l-flex pf-m-justify-content-space-between-on-sm"
    >
      <div
        class=""
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class=""
          >
            <h1
              class="pf-v5-c-title pf-m-2xl pf-u-mb-sm"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-2"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            >
              dolor sit
            </h1>
          </div>
        </div>
      </div>
    </div>
  </section>
</pageheader>
`;

exports[`PageHeader Component should render the subtitle when viewId is provided: with subtitle 1`] = `
<pageheader
  props="{
  "productLabel": "RHEL",
  "children": [
    {}
  ]
}"
>
  <section
    class="pf-v5-l-page-header pf-v5-c-page-header pf-v5-l-page__main-section pf-v5-c-page__main-section pf-m-light"
    data-ouia-component-id="OUIA-Generated-RHI/Header-true-3"
    data-ouia-component-type="RHI/Header"
    data-ouia-safe="true"
    widget-type="InsightsPageHeader"
  >
    <div
      class="pf-v5-l-flex pf-m-justify-content-space-between-on-sm"
    >
      <div
        class=""
      >
        <div
          class="pf-v5-l-flex pf-m-justify-content-space-between"
        >
          <div
            class=""
          >
            <h1
              class="pf-v5-c-title pf-m-2xl pf-u-mb-sm"
              data-ouia-component-id="OUIA-Generated-RHI/Header-true-4"
              data-ouia-component-type="RHI/Header"
              data-ouia-safe="true"
              widget-type="InsightsPageHeaderTitle"
            >
              lorem
            </h1>
          </div>
        </div>
      </div>
    </div>
    <p>
      t(curiosity-view.subtitle, {"appName":"Subscriptions","context":"RHEL"}, [object Object])
    </p>
  </section>
</pageheader>
`;
